# cat-schedule

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260407_01_initial.py
backend/app/: __init__.py  cli.py  main.py
backend/app/api/: __init__.py  account.py  auth.py  deps.py  grades.py  schedule.py  settings.py
backend/app/core/: config.py  crypto.py  errors.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  entities.py
backend/app/portal/: __init__.py  captcha.py  client.py  config.py  parsers.py  test-solve.py
backend/app/schemas/: auth.py  common.py  grades.py  portal.py  schedule.py  settings.py
backend/app/services/: auth_service.py  grade_service.py  invite_service.py  notification_service.py  portal_service.py  schedule_service.py  task_service.py
backend/app/tasks/: __init__.py  jobs.py  scheduler.py
web/: Dockerfile  index.html  nginx.conf  package.json
web/src/: App.tsx  styles.css  vite-env.d.ts
web/src/components/: AppShell.tsx
web/src/lib/: api.ts  localCache.ts  termDates.ts
web/src/pages/: GradesPage.tsx  LoginPage.tsx  PortalPage.tsx  RegisterPage.tsx  SchedulePage.tsx  SettingsPage.tsx
